@@ -6,7 +6,7 @@ topic-tags: deploying
 docset: aem65
 feature: Configuring
 exl-id: c1c90d6a-ee5a-487d-9a8a-741b407c8c06
-source-git-commit: 1a741ff01fcf17dfdcc8c1cebcd858052d07361c
+source-git-commit: bb8dbb9069c4575af62a4d0b21195cee75944fea
 workflow-type: tm+mt
 source-wordcount: '3583'
 ht-degree: 90%
@@ -232,7 +232,7 @@ java -jar <aem-jar-file>.jar -r crx3tar-nofds
 | --- | --- | --- | --- |
 | accessKey | バケットへのアクセス権を持つ IAM ユーザーのキー ID にアクセスします。 |  | はい、IAM ロールを使用していない場合は有効です。 |
 | secretKey | バケットへのアクセス権を持つ IAM ユーザーの秘密アクセスキー。 |  | はい、IAM ロールを使用していない場合は有効です。 |
-| cacheSize | ローカルキャッシュのサイズ（バイト単位）です。 | 64 GB | いいえ. |
+| cacheSize | ローカルキャッシュのサイズ（バイト単位）です。 | 64GB | いいえ. |
 | connectionTimeout | 最初に接続を確立したときにタイムアウトするまでに待機する時間（ミリ秒）を設定します。 | 10000 | いいえ. |
 | maxCachedBinarySize | この値（バイト単位）以下のサイズのバイナリは、メモリキャッシュに格納されます。 | 17408(17 KB) | いいえ. |
 | maxConnections | 許可されるオープン HTTP 接続の最大数を設定します。 | 50 | いいえ. |
@@ -353,7 +353,7 @@ S3 によるバイナリなしのレプリケーションを設定するには�
 1. MongoDB がインストールされていること、および `mongod` のインスタンスが実行されていることを確認します。
 1. 次のコマンドを使用して AEM を起動します。
 
-   `java -Xmx1024m -XX:MaxPermSize=256M -jar cq-quickstart.jar -r crx3,crx3mongo`
+   `java -Xmx1024m -jar cq-quickstart.jar -r crx3,crx3mongo`
 
 1. 2 つ目の AEM インスタンスについて手順 1 ～ 4 を繰り返します。
 1. 2 つ目の AEM インスタンスを起動します。
