@@ -11,10 +11,10 @@ topic-tags: deploying
 discoiquuid: e48cc0ed-688c-44c8-b6d6-5f3c8593a295
 docset: aem65
 exl-id: 3df0662a-0768-4b56-8b94-c517657b4bd9
-source-git-commit: 1cef6f87fa66fd78d439c23e6ac907f9531b8fd6
+source-git-commit: bb8dbb9069c4575af62a4d0b21195cee75944fea
 workflow-type: tm+mt
-source-wordcount: '1821'
-ht-degree: 100%
+source-wordcount: '1808'
+ht-degree: 99%
 
 ---
 
@@ -177,16 +177,10 @@ AEM ソフトウェアパッケージには、次の 2 つの形式がありま�
 
 1. GUI 環境でインスタンスを起動するには、**`cq-quickstart-6.5.0.jar`** ファイルをダブルクリックします。
 
-   また、AEM はコマンドラインから起動することもできます。32 ビット Java VM の場合は、次のように入力します。
+   または、コマンドラインからAEMを起動することもできます。
 
    ```shell
        java -Xmx1024M -jar cq-quickstart-6.5.0.jar
-   ```
-
-   64 ビット VM の場合は、次のように入力します。
-
-   ```shell
-       java -XX:MaxPermSize=256m -Xmx1024M -jar cq-quickstart-6.5.0.jar
    ```
 
 数分かけて、jar ファイルが展開され、AEM がインストールされ、起動します。上記の手順の結果、
